Updated IAS Logo, Added content on Student Awards page and rectified bug of text overflow on contactUs Page

--- a/src/Components/Sponsors/Sponsors.module.scss
+++ b/src/Components/Sponsors/Sponsors.module.scss
@@ -30,9 +30,15 @@
                     padding-top: 2rem;
                   }
                 .logo5{
+                    padding-top: 0.8rem;
+                    padding-left: 0.3rem;
+                }
+                .logo1{
+                    padding-top: 1rem;
+                }
+                .logo6{
                     padding-top: 2rem;
                 }
-                
                 @media (max-width: 1000px) {
                     display: grid;
                     grid-template-columns: repeat(3, 1fr);
@@ -64,7 +70,7 @@
         justify-content: space-evenly;
         padding-top: 3%; 
         .logo1{
-            padding-top: 2rem;
+            padding-top: 0.3rem;
         }     
     }
 
